--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
   align-items: center;
 }
 
-.footer__right-bottom button, .team__footer-card .team__card-btns button, .team__right-top button, .inter__left-card button {
+.goal-statistic button, .plates__btns button, .about__hero .startup__card-right button, .about__hero-texts button, .footer__right-bottom button, .team__footer-card .team__card-btns button, .team__right-top button, .inter__left-card button {
   margin-top: 10px;
   padding: 9px 50px;
   border-radius: 50px;
@@ -36,7 +36,7 @@ body {
   cursor: pointer;
 }
 
-.footer__right-bottom button, .team__footer-card .team__card-btns button, .team__right-top button, .inter__left-card button {
+.goal-statistic button, .plates__btns button, .about__hero .startup__card-right button, .about__hero-texts button, .footer__right-bottom button, .team__footer-card .team__card-btns button, .team__right-top button, .inter__left-card button {
   margin-top: 10px;
   padding: 9px 50px;
   border-radius: 50px;
@@ -237,7 +237,7 @@ body {
     display: block;
   }
 }
-.footer__right-bottom button, .team__footer-card .team__card-btns button, .team__right-top button, .inter__left-card button {
+.goal-statistic button, .plates__btns button, .about__hero .startup__card-right button, .about__hero-texts button, .footer__right-bottom button, .team__footer-card .team__card-btns button, .team__right-top button, .inter__left-card button {
   margin-top: 10px;
   padding: 9px 50px;
   border-radius: 50px;
@@ -306,7 +306,7 @@ body {
     line-height: 24px; /* 150% */
   }
 }
-.footer__right-bottom button, .team__footer-card .team__card-btns button, .team__right-top button, .inter__left-card button {
+.goal-statistic button, .plates__btns button, .about__hero .startup__card-right button, .about__hero-texts button, .footer__right-bottom button, .team__footer-card .team__card-btns button, .team__right-top button, .inter__left-card button {
   margin-top: 10px;
   padding: 9px 50px;
   border-radius: 50px;
@@ -1656,5 +1656,473 @@ body {
     font-weight: 400;
     line-height: 24px; /* 150% */
     text-transform: capitalize;
+  }
+}
+.about__hero {
+  padding: 120px 0;
+}
+.about__hero-title {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 52px; /* 130% */
+  text-transform: uppercase;
+  max-width: 493px;
+}
+.about__hero-img img {
+  max-width: 497px;
+  width: 100%;
+}
+.about__hero-statistics {
+  display: flex;
+  flex-direction: column;
+}
+.about__hero-statistic {
+  border-bottom: 1px solid #828388;
+}
+.about__hero-statistic h3 {
+  color: #184AFB;
+  font-family: Michroma;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 72px; /* 180% */
+  text-transform: uppercase;
+}
+.about__hero-statistic p {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px; /* 175% */
+  text-transform: capitalize;
+  color: #333;
+}
+.about__hero-cards {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-top: 60px;
+}
+.about__hero-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 487px;
+  width: 100%;
+  padding: 60px 0;
+  border: 1px solid #828388;
+  border-radius: 8px;
+}
+.about__hero-texts {
+  margin-top: 30px;
+  border-bottom: 1px solid #828388;
+  padding-bottom: 20px;
+}
+.about__hero-texts p {
+  max-width: 519px;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+  color: #828388;
+}
+.about__hero-paragraph {
+  padding: 40px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  border-bottom: 1px solid #828388;
+}
+.about__hero-paragraph h3 {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 52px; /* 162.5% */
+  text-transform: capitalize;
+  color: #2E3038;
+}
+.about__hero-paragraph P {
+  max-width: 745px;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+  color: #828388;
+}
+.about__hero-startups {
+  padding: 60px 0;
+}
+.about__hero .startup__cards {
+  margin-top: 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+.about__hero .startup__card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+.about__hero .startup__card-left {
+  background-color: #f5f5f5;
+  padding: 28px 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.about__hero .startup__card-right {
+  border-top: 1px solid #828388;
+}
+.about__hero .startup__card-right p {
+  margin-top: 30px;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 171.429% */
+  letter-spacing: 0.14px;
+  text-transform: capitalize;
+  color: #2E3038;
+}
+.plates {
+  padding-bottom: 60px;
+}
+.plates__title {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 24px; /* 75% */
+  text-transform: uppercase;
+}
+.plates__img {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 20px;
+}
+.plates__img img {
+  max-width: 654px;
+  width: 100%;
+}
+.plates__desc {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+}
+.plates__desc p {
+  max-width: 639px;
+  color: #666;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+}
+.plates__btns {
+  margin-top: 24px;
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+}
+.plates__btns button:nth-child(2) {
+  background-color: #184AFB;
+}
+
+@media (min-width: 972px) {
+  .about__hero {
+    padding: 150px 0;
+  }
+  .about__hero-in {
+    display: flex;
+    flex-direction: column;
+    gap: 60px;
+  }
+  .about__hero-title {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 52px; /* 130% */
+    text-transform: uppercase;
+    max-width: 493px;
+  }
+  .about__hero-img img {
+    max-width: 987px;
+    width: 100%;
+  }
+  .about__hero-statistics {
+    display: flex;
+    flex-direction: row;
+    margin-top: 32px;
+  }
+  .about__hero-statistic {
+    border-bottom: none;
+    border-right: 1px solid #828388;
+    padding-right: 170px;
+    padding-left: 33px;
+    margin-right: 20;
+  }
+  .about__hero-statistic:nth-child(3) {
+    border-right: none;
+  }
+  .about__hero-statistic h3 {
+    color: #184AFB;
+    font-family: Michroma;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 72px; /* 180% */
+    text-transform: uppercase;
+  }
+  .about__hero-statistic p {
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px; /* 175% */
+    text-transform: capitalize;
+    color: #333;
+    margin-top: 60px;
+  }
+  .about__hero-cards {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-top: 60px;
+  }
+  .about__hero-texts {
+    display: flex;
+    gap: 309px;
+    margin-top: 30px;
+    border-bottom: 1px solid #828388;
+    padding-bottom: 40px;
+  }
+  .about__hero-texts p {
+    max-width: 519px;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 150% */
+    color: #828388;
+  }
+  .about__hero-texts button {
+    padding: 6px 61px;
+  }
+  .about__hero-paragraph {
+    padding: 40px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+  .about__hero-paragraph h3 {
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 52px; /* 162.5% */
+    text-transform: capitalize;
+    color: #2E3038;
+  }
+  .about__hero-paragraph P {
+    max-width: 745px;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 150% */
+    color: #828388;
+  }
+  .about__hero-startups {
+    padding: 120px 0;
+  }
+  .about__hero-startups h3 {
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px; /* 75% */
+    color: #333;
+  }
+  .about__hero .startup__card {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    gap: 20px;
+  }
+  .about__hero .startup__card-right {
+    border-top: 1px solid #828388;
+  }
+  .about__hero .startup__card-right p {
+    margin-top: 30px;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 171.429% */
+    letter-spacing: 0.14px;
+    text-transform: capitalize;
+    color: #2E3038;
+  }
+  .about__hero .startup__card-right button {
+    margin-top: 51px;
+  }
+  .plates {
+    padding-bottom: 120px;
+  }
+  .plates__title {
+    display: flex;
+    justify-content: center;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px; /* 75% */
+    text-transform: uppercase;
+  }
+  .plates__img {
+    display: flex;
+    flex-direction: row;
+    gap: 12px;
+    margin-top: 20px;
+  }
+  .plates__img img {
+    max-width: 654px;
+    width: 100%;
+  }
+}
+.goal-statistic {
+  border-bottom: 1px solid #828388;
+  padding-bottom: 20px;
+}
+.goal-statistic p {
+  color: #828388;
+  max-width: 408px;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+}
+.stage {
+  border-bottom: 1px solid #828388;
+  padding-bottom: 60px;
+  padding-top: 60px;
+}
+.stage__cards {
+  padding-bottom: 40px;
+  border-bottom: 1px solid #828388;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
+}
+.stage__card-img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 40px 0;
+  max-width: 487px;
+  width: 100%;
+  background-color: #f5f5f5;
+}
+.stage__card-img img {
+  max-width: 255px;
+  width: 100%;
+}
+.stage__card-title {
+  margin-top: 20px;
+}
+.stage__card-title p {
+  max-width: 487px;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 171.429% */
+  letter-spacing: 0.14px;
+  text-transform: capitalize;
+  color: #828388;
+}
+.stage__statistics {
+  margin-top: 20px;
+}
+.stage__statistic-title {
+  display: flex;
+  align-items: flex-start;
+  gap: 32px;
+}
+.stage__statistic-title h3 {
+  max-width: 465px;
+  font-weight: 400;
+}
+.stage__statistic-desc {
+  margin-top: 15px;
+}
+.stage__statistic-desc P {
+  max-width: 321px;
+  color: var(--2, #3D5A5C);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+  text-transform: uppercase;
+}
+.stage__statistic-right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.stage__statistics {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  flex-wrap: wrap;
+}
+
+@media (min-width: 972px) {
+  .goal-statistic {
+    display: flex;
+    gap: 413px;
+    align-items: flex-start;
+  }
+  .stage {
+    padding-bottom: 120px;
+    padding-top: 120px;
+  }
+  .stage__title {
+    font-family: Poppins;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 52px; /* 162.5% */
+    text-transform: capitalize;
+    color: #2E3038;
+  }
+  .stage__card-img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 40px 0;
+    max-width: 487px;
+    width: 100%;
+    background-color: #f5f5f5;
+  }
+  .stage__card-img img {
+    max-width: 255px;
+    width: 100%;
+  }
+  .stage__card-title {
+    margin-top: 20px;
+  }
+  .stage__card-title p {
+    max-width: 487px;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 171.429% */
+    letter-spacing: 0.14px;
+    text-transform: capitalize;
+    color: #828388;
+  }
+  .stage__statistic {
+    display: flex;
+    gap: 474px;
   }
 }
