--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
   align-items: center;
 }
 
-.goal-statistic button, .plates__btns button, .about__hero .startup__card-right button, .about__hero-texts button, .footer__right-bottom button, .team__footer-card .team__card-btns button, .team__right-top button, .inter__left-card button {
+.strategy__card-btn button, .chance__left-btn button, .goal-statistic button, .plates__btns button, .about__hero .startup__card-right button, .about__hero-texts button, .footer__right-bottom button, .team__footer-card .team__card-btns button, .team__right-top button, .inter__left-card button {
   margin-top: 10px;
   padding: 9px 50px;
   border-radius: 50px;
@@ -36,7 +36,7 @@ body {
   cursor: pointer;
 }
 
-.goal-statistic button, .plates__btns button, .about__hero .startup__card-right button, .about__hero-texts button, .footer__right-bottom button, .team__footer-card .team__card-btns button, .team__right-top button, .inter__left-card button {
+.strategy__card-btn button, .chance__left-btn button, .goal-statistic button, .plates__btns button, .about__hero .startup__card-right button, .about__hero-texts button, .footer__right-bottom button, .team__footer-card .team__card-btns button, .team__right-top button, .inter__left-card button {
   margin-top: 10px;
   padding: 9px 50px;
   border-radius: 50px;
@@ -237,7 +237,7 @@ body {
     display: block;
   }
 }
-.goal-statistic button, .plates__btns button, .about__hero .startup__card-right button, .about__hero-texts button, .footer__right-bottom button, .team__footer-card .team__card-btns button, .team__right-top button, .inter__left-card button {
+.strategy__card-btn button, .chance__left-btn button, .goal-statistic button, .plates__btns button, .about__hero .startup__card-right button, .about__hero-texts button, .footer__right-bottom button, .team__footer-card .team__card-btns button, .team__right-top button, .inter__left-card button {
   margin-top: 10px;
   padding: 9px 50px;
   border-radius: 50px;
@@ -306,7 +306,7 @@ body {
     line-height: 24px; /* 150% */
   }
 }
-.goal-statistic button, .plates__btns button, .about__hero .startup__card-right button, .about__hero-texts button, .footer__right-bottom button, .team__footer-card .team__card-btns button, .team__right-top button, .inter__left-card button {
+.strategy__card-btn button, .chance__left-btn button, .goal-statistic button, .plates__btns button, .about__hero .startup__card-right button, .about__hero-texts button, .footer__right-bottom button, .team__footer-card .team__card-btns button, .team__right-top button, .inter__left-card button {
   margin-top: 10px;
   padding: 9px 50px;
   border-radius: 50px;
@@ -2124,5 +2124,275 @@ body {
   .stage__statistic {
     display: flex;
     gap: 474px;
+  }
+}
+.chance__in {
+  padding-left: 20px;
+  padding-top: 40px;
+  background-color: #f5f5f5;
+  border-radius: 8px;
+}
+.chance__left-title {
+  max-width: 392px;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 32px; /* 130% */
+  text-transform: uppercase;
+}
+.chance__left-link {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+  color: #333;
+  max-width: 440px;
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+.chance__left-btn button {
+  background-color: #184AFB;
+  color: #FFF;
+}
+.chance__left-btn button:hover {
+  background-color: #fff;
+  color: #184AFB;
+}
+.chance__right {
+  margin-top: 20px;
+}
+.chance__right img {
+  max-width: 396px;
+  width: 100%;
+}
+
+.strategy__in {
+  padding: 60px 0;
+}
+.strategy__title {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 34px; /* 137.5% */
+  text-transform: uppercase;
+}
+.strategy__cards {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
+  margin-top: 20px;
+}
+.strategy__card {
+  border: 1px solid #828388;
+  padding: 20px;
+  border-radius: 8px;
+}
+.strategy__card-desc {
+  margin-top: 10px;
+}
+.strategy__card-btn {
+  margin-top: 20px;
+}
+.strategy__card-btn button {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+.strategy__card-right {
+  margin-top: 15px;
+}
+.strategy__card-right img {
+  width: 100%;
+  max-width: 240px;
+}
+
+.works__in {
+  padding: 60px 0;
+}
+.works__title {
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 44px; /* 137.5% */
+  text-transform: uppercase;
+  color: #2E3038;
+}
+.works__cards {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
+}
+.works__card {
+  background-color: #f5f5f5;
+  padding: 30px;
+  border-radius: 8px;
+}
+.works__card-left img {
+  max-width: 230px;
+  width: 100%;
+}
+.works__card-title h3 {
+  margin-top: 10px;
+  max-width: 518px;
+  font-size: 18px;
+  color: #56585E;
+  font-style: normal;
+  font-weight: 200;
+  line-height: 18px; /* 150% */
+}
+.works__card-desc p {
+  margin-top: 10px;
+  color: #828388;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+}
+
+@media (min-width: 972px) {
+  .chance__in {
+    display: flex;
+    gap: 266px;
+    padding-left: 60px;
+    padding-top: 60px;
+  }
+  .chance__left-title {
+    max-width: 392px;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 52px; /* 130% */
+    text-transform: uppercase;
+  }
+  .chance__left-list {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    margin-top: 40px;
+  }
+  .chance__left-link {
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px;
+    color: #333;
+    max-width: 440px;
+  }
+  .chance__left-btn {
+    margin-top: 136px;
+  }
+  .chance__left-btn button {
+    background-color: #184AFB;
+    color: #FFF;
+  }
+  .chance__right {
+    margin-top: 20px;
+  }
+  .chance__right img {
+    max-width: 396px;
+    width: 100%;
+  }
+  .strategy__in {
+    padding: 120px 0;
+  }
+  .strategy__title {
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 44px; /* 137.5% */
+    text-transform: uppercase;
+  }
+  .strategy__cards {
+    margin-top: 20px;
+  }
+  .strategy__card {
+    border: 1px solid #828388;
+    padding: 40px;
+    border-radius: 8px;
+    display: inline-flex;
+  }
+  .strategy__card-title {
+    max-width: 432px;
+    width: 100%;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 32px; /* 133.333% */
+    text-transform: uppercase;
+  }
+  .strategy__card-desc {
+    margin-top: 20px;
+    max-width: 506px;
+    color: #828388;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 150% */
+  }
+  .strategy__card-btn {
+    margin-top: 90px;
+  }
+  .strategy__card-btn button {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+  }
+  .strategy__card-right {
+    margin-top: 15px;
+  }
+  .strategy__card-right img {
+    width: 100%;
+    max-width: 240px;
+  }
+  .works__in {
+    padding: 120px 0;
+  }
+  .works__title {
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 44px; /* 137.5% */
+    text-transform: uppercase;
+    color: #2E3038;
+  }
+  .works__cards {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+  }
+  .works__card {
+    display: inline-flex;
+    gap: 86px;
+    background-color: #f5f5f5;
+    padding: 60px;
+    border-radius: 8px;
+  }
+  .works__card-left img {
+    max-width: 230px;
+    width: 100%;
+  }
+  .works__card-title h3 {
+    margin-top: 0px;
+    max-width: 518px;
+    font-size: 24px;
+    color: #56585E;
+    font-style: normal;
+    font-weight: 200;
+    line-height: 36px; /* 150% */
+  }
+  .works__card-desc p {
+    max-width: 441px;
+    margin-top: 10px;
+    color: #828388;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 150% */
   }
 }
