--- a/sass/pages/_header.scss
+++ b/sass/pages/_header.scss
@@ -67,6 +67,7 @@
     }
     &__item{
         a{
+            position: relative;
             color: var(--descropion, #828388);
             font-family: Poppins;
             font-size: 16px;
@@ -74,6 +75,19 @@
             font-weight: 400;
             line-height: 24px; /* 150% */
             color: #FFF;
+            &::after{
+                content: '';
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                width: 0;
+                height: 2px;
+                background-color: #184AFB;
+                transition: all 0.6s;
+            }
+            &:hover::after{
+                width: 100%;
+            }
         }
     }
     &__list-show{
